--- a/using_fo_wandb_plugin.ipynb
+++ b/using_fo_wandb_plugin.ipynb
@@ -300,9 +300,7 @@
         "- ✅ Sample IDs and Label IDs for reproducibility\n",
         "- ✅ VLM support with prompts and model config\n",
         "- ✅ Target view selection (Dataset, View, Selected samples)\n",
-        "- ✅ Lightweight by default (no images)\n",
-        "\n",
-        "**Documentation**: See `wandb_plugin_info/` directory for complete guides.\n"
+        "- ✅ Lightweight by default (no images)"
       ]
     }
   ],
